# ATLAS

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
atlas/: __init__.py  config.py  main.py
atlas/agent/: __init__.py  memory.py  orchestrator.py  prompts.py
atlas/api/: routes.py  schemas.py
atlas/evaluator/: __init__.py  confidence.py  evaluator.py  grounding.py  hallucination.py  self_corrector.py
atlas/observability/: __init__.py  logger.py  metrics.py  tracer.py
atlas/planner/: __init__.py  dag.py  decomposer.py  prompts.py
atlas/report/: __init__.py  citations.py  generator.py
atlas/retriever/: arxiv_search.py  dense.py  hybrid.py  ingest.py  reranker.py  sparse.py  web_search.py
atlas/tools/: __init__.py  default_tools.py  registry.py
frontend/: index.html
scripts/: export_metrics.py  ingest_papers.py  run_eval.py
tests/unit/: test_agent.py  test_chunker.py  test_dag.py  test_decomposer.py  test_eval_suite.py  test_evaluator.py  test_report.py  test_reranker.py  test_retrieval.py  test_search_tools.py  test_self_corrector.py
