[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "ATLAS — Autonomous Tool-using LLM Agent for Synthesis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Pratham Bharati", email = "pratham@example.com"},
]

dependencies = [
    # Core LLM & Embeddings
    "openai>=1.30.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",

    # Vector Store & Retrieval
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",

    # PDF & Document Processing
    "pdfplumber>=0.11.0",
    "unstructured[pdf]>=0.14.0",

    # Web & Arxiv Search
    "tavily-python>=0.3.0",
    "arxiv>=2.1.0",
    "httpx>=0.27.0",

    # API & Backend
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Observability & Logging
    "structlog>=24.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

eval = [
    # Hallucination detection & NLI
    "shap>=0.45.0",
]

[project.scripts]
atlas = "atlas.main:run"

[tool.setuptools.packages.find]
include = ["atlas*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
